--- a/AngularReactiveForm/src/app/header/header.component.css
+++ b/AngularReactiveForm/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding-left: 3em;
     overflow: hidden;
     background-color: #333;
   }
@@ -18,7 +18,6 @@ ul {
     text-decoration: none;
   }
   
-  /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #111;
   }
